@@ -1,3 +1,8 @@
+Wed May 28 13:32:39 2003  George Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: smarter dialog behaviour for open and load,
+	  and add a reload menu item and also do some de-deprecation
+
 Wed May 28 10:17:10 2003  George Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: cleanup the program stuff a bit, add a programs
